# docs/swagger.yaml
@@ -10,8 +10,17 @@ paths:
             type: string
       tags:
       - 首页
-  /user/createUser:
+  /toRegister:
     get:
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      tags:
+      - 注册页
+  /user/createUser:
+    post:
       parameters:
       - description: 用户名
         in: query
@@ -57,7 +66,7 @@ paths:
       tags:
       - 用户模块
   /user/findUserByNameAndPwd:
-    get:
+    post:
       parameters:
       - description: 名字
         in: query
