# router/router.go
@@ -12,14 +12,26 @@ import (
 
 func Router() *gin.Engine {
 	r := gin.Default()
+
+	// swagger
 	docs.SwaggerInfo.BasePath = ""
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
+
+	//静态资源
+	r.Static("/asset", "asset/")
+	r.LoadHTMLGlob("views/**/*")
+
+	//首页
+	r.GET("/", service.GetIndex)
 	r.GET("/index", service.GetIndex)
+	r.GET("/toRegister", service.ToRegister)
+
+	//用户信息
 	r.GET("/user/getUserList", service.GetUserList)
-	r.GET("/user/createUser", service.CreateUser)
+	r.POST("/user/createUser", service.CreateUser)
 	r.GET("/user/deleteUser", service.DeleteUser)
 	r.POST("/user/updateUser", service.UpdateUser)
-	r.GET("/user/findUserByNameAndPwd", service.FindUserByNameAndPwd)
+	r.POST("/user/findUserByNameAndPwd", service.FindUserByNameAndPwd)
 	//发送消息
 	r.GET("/user/sendMsg", service.SendMsg)
 	r.GET("/user/sendUserMsg", service.SendUserMsg)
