# service/index.go
@@ -1,6 +1,8 @@
 package service
 
 import (
+	"html/template"
+
 	"github.com/gin-gonic/gin"
 )
 
@@ -9,7 +11,24 @@ import (
 // @Success 200 {string} welcome
 // @Router /index [get]
 func GetIndex(c *gin.Context) {
-	c.JSON(200, gin.H{
-		"message": "welcome",
-	})
+	ind, err := template.ParseFiles("index.html")
+	if err != nil {
+		panic(err)
+	}
+	ind.Execute(c.Writer, "index")
+	// c.JSON(200, gin.H{
+	// 	"message": "welcome",
+	// })
+}
+
+// GetIndex
+// @Tags 注册页
+// @Success 200 {string} welcome
+// @Router /toRegister [get]
+func ToRegister(c *gin.Context) {
+	ind, err := template.ParseFiles("register.html")
+	if err != nil {
+		panic(err)
+	}
+	ind.Execute(c.Writer, "toRegister")
 }
